cfg/deployment_fdb-kubernetes-operator-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"fdb-kubernetes-operator-controller-manager","control-plane":"controller-manager"},"name":"fdb-kubernetes-operator-controller-manager","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"fdb-kubernetes-operator-controller-manager"}},"template":{"metadata":{"labels":{"app":"fdb-kubernetes-operator-controller-manager","control-plane":"controller-manager"}},"spec":{"containers":[ [...]
  creationTimestamp: "2022-08-29T03:20:01Z"
  generation: 1
  labels:
    app: fdb-kubernetes-operator-controller-manager
    control-plane: controller-manager
  name: fdb-kubernetes-operator-controller-manager
  namespace: default
  resourceVersion: "358148"
  uid: 5358230c-a28a-4c02-b379-92eb1161da9f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fdb-kubernetes-operator-controller-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fdb-kubernetes-operator-controller-manager
        control-plane: controller-manager
    spec:
      containers:
      - command:
        - /manager
        image: foundationdb/fdb-kubernetes-operator:v1.8.1
        imagePullPolicy: IfNotPresent
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/log/fdb
          name: logs
        - mountPath: /usr/bin/fdb
          name: fdb-binaries
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 4059
        runAsGroup: 4059
        runAsUser: 4059
      serviceAccount: fdb-kubernetes-operator-controller-manager
      serviceAccountName: fdb-kubernetes-operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: logs
      - emptyDir: {}
        name: fdb-binaries
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-08-29T03:20:53Z"
    lastUpdateTime: "2022-08-29T03:20:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-08-29T03:20:01Z"
    lastUpdateTime: "2022-08-29T03:20:53Z"
    message: ReplicaSet "fdb-kubernetes-operator-controller-manager-74cb9d9c7d" has
      successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
