cfg/fdb_builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fdb-builder
spec:
  containers:
  - image: foundationdb/build:centos7-latest
    imagePullPolicy: IfNotPresent
    name: fdb-builder
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
    resources:
      requests:
        cpu: 4000m
        memory: 6400Mi
      limits:
        cpu: 10000m
        memory: 25600Mi
    volumeMounts:
    - mountPath: /data
      name: data
  volumes:
  - name: cache-volume
    emptyDir: {}
  - name: data
    hostPath:
      path: /data
      type: DirectoryOrCreate
