cfg/fdb_test-cluster-cluster-controller-1.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foundationdb.org/last-applied-config-map: ff0522f666c1854af18326793e862f14fe6a725c5f3e035186ed426af3539a93
    foundationdb.org/last-applied-spec: 39e562dfa22a47e915a7da5c584391593e4785758d6646aa784bfe8362156859
    foundationdb.org/public-ip-source: pod
  creationTimestamp: "2022-08-29T03:21:13Z"
  labels:
    foundationdb.org/fdb-cluster-name: test-cluster
    foundationdb.org/fdb-process-class: cluster_controller
    foundationdb.org/fdb-process-group-id: cluster_controller-1
  name: test-cluster-cluster-controller-1
  namespace: default
  ownerReferences:
  - apiVersion: apps.foundationdb.org/v1beta2
    controller: true
    kind: FoundationDBCluster
    name: test-cluster
    uid: 7c5a7229-9457-4666-9ce7-353db15362ac
  resourceVersion: "364225"
  uid: a675bc46-29a0-4507-9e39-0e797314faf2
spec:
  containers:
  - args:
    - fdbmonitor --conffile /var/dynamic-conf/fdbmonitor.conf --lockfile /var/dynamic-conf/fdbmonitor.lockfile
      --loggroup test-cluster >> /var/log/fdb-trace-logs/fdbmonitor-$(date '+%Y-%m-%d').log
      2>&1
    command:
    - sh
    - -c
    image: foundationdb/foundationdb:6.3.22
    imagePullPolicy: IfNotPresent
    name: foundationdb
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      readOnlyRootFilesystem: true
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/fdb/data
      name: data
    - mountPath: /var/dynamic-conf
      name: dynamic-conf
    - mountPath: /var/log/fdb-trace-logs
      name: fdb-trace-logs
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ktfj6
      readOnly: true
  - args:
    - --copy-file
    - fdb.cluster
    - --input-monitor-conf
    - fdbmonitor.conf
    - --copy-binary
    - fdbserver
    - --copy-binary
    - fdbcli
    - --main-container-version
    - 6.3.22
    - --substitute-variable
    - FDB_POD_IP
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 5
      periodSeconds: 30
      successThreshold: 1
      tcpSocket:
        port: 8080
      timeoutSeconds: 1
    name: foundationdb-kubernetes-sidecar
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      readOnlyRootFilesystem: true
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/input-files
      name: config-map
    - mountPath: /var/output-files
      name: dynamic-conf
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ktfj6
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: test-cluster-cluster-controller-1
  nodeName: docker-desktop
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  subdomain: test-cluster
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: data
  - emptyDir: {}
    name: dynamic-conf
  - configMap:
      defaultMode: 420
      items:
      - key: fdbmonitor-conf-cluster_controller
        path: fdbmonitor.conf
      - key: cluster-file
        path: fdb.cluster
      name: test-cluster-config
    name: config-map
  - emptyDir: {}
    name: fdb-trace-logs
  - name: kube-api-access-ktfj6
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-08-29T03:21:21Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-08-29T03:21:22Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-08-29T03:21:22Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-08-29T03:21:13Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://cc5a8c08cf9c101234508444ecb635f6f63f2d92bdeb857314df5a77cf8a954d
    image: foundationdb/foundationdb:6.3.22
    imageID: docker-pullable://foundationdb/foundationdb@sha256:4b5e2a3c42366bd4a321d023e2f6d03ea1fbfe12a4f787a699aab409c9bf4fff
    lastState: {}
    name: foundationdb
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-08-29T03:21:21Z"
  - containerID: docker://35d861544578426c39d640b578a9bc144191eb9b9302c7517bfd732e84485243
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imageID: docker-pullable://foundationdb/foundationdb-kubernetes-sidecar@sha256:6ac0ab6b42bae99c6e0b4a436ff8d1a053fbe653f13b31d650b640114e9a04f3
    lastState: {}
    name: foundationdb-kubernetes-sidecar
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-08-29T03:21:21Z"
  hostIP: 192.168.65.4
  initContainerStatuses:
  - containerID: docker://721f17df8f942e47e2b53a5e249c413ee39767ce9899da3cfddb698ccd597e16
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imageID: docker-pullable://foundationdb/foundationdb-kubernetes-sidecar@sha256:6ac0ab6b42bae99c6e0b4a436ff8d1a053fbe653f13b31d650b640114e9a04f3
    lastState: {}
    name: foundationdb-kubernetes-init
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://721f17df8f942e47e2b53a5e249c413ee39767ce9899da3cfddb698ccd597e16
        exitCode: 0
        finishedAt: "2022-08-29T03:21:19Z"
        reason: Completed
        startedAt: "2022-08-29T03:21:15Z"
  phase: Running
  podIP: 10.1.1.116
  podIPs:
  - ip: 10.1.1.116
  qosClass: Guaranteed
  startTime: "2022-08-29T03:21:13Z"
