cfg/nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-deployment-6fb79bc456-58sf2
  namespace: default
spec:
  containers:
  - image: nginx:alpine
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    volumeMounts:
    - mountPath: /tmp/data
      name: data
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
  - name: data
    hostPath:
      path: /data
      type: DirectoryOrCreate
