cfg/pod_test-cluster-log-1.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foundationdb.org/last-applied-config-map: 3d5a7947954b60ba67ad9ddc9dd8c067cc832174dbbf5330c669a98ac4fbb363
    foundationdb.org/last-applied-spec: 821f55317ac42a7fabe106efba5bf0363e13350ca244cf82c174e6173728c552
    foundationdb.org/public-ip-source: pod
  creationTimestamp: "2022-08-30T02:07:02Z"
  labels:
    foundationdb.org/fdb-cluster-name: test-cluster
    foundationdb.org/fdb-process-class: log
    foundationdb.org/fdb-process-group-id: log-1
  name: test-cluster-log-1
  namespace: default
  ownerReferences:
  - apiVersion: apps.foundationdb.org/v1beta2
    controller: true
    kind: FoundationDBCluster
    name: test-cluster
    uid: 639b0040-eb3e-46ca-a9ec-f939ffc52290
  resourceVersion: "557058"
  uid: 544153c0-102a-4509-82f0-fda9e3ac0be4
spec:
  containers:
  - args:
    - fdbmonitor --conffile /var/dynamic-conf/fdbmonitor.conf --lockfile /var/dynamic-conf/fdbmonitor.lockfile
      --loggroup test-cluster >> /var/log/fdb-trace-logs/fdbmonitor-$(date '+%Y-%m-%d').log
      2>&1
    command:
    - sh
    - -c
    image: foundationdb/foundationdb:6.3.22
    imagePullPolicy: IfNotPresent
    name: foundationdb
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      readOnlyRootFilesystem: true
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/fdb/data
      name: data
    - mountPath: /var/dynamic-conf
      name: dynamic-conf
    - mountPath: /var/log/fdb-trace-logs
      name: fdb-trace-logs
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-sxwnh
      readOnly: true
  - args:
    - --copy-file
    - fdb.cluster
    - --input-monitor-conf
    - fdbmonitor.conf
    - --copy-binary
    - fdbserver
    - --copy-binary
    - fdbcli
    - --main-container-version
    - 6.3.22
    - --substitute-variable
    - FDB_POD_IP
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 5
      periodSeconds: 30
      successThreshold: 1
      tcpSocket:
        port: 8080
      timeoutSeconds: 1
    name: foundationdb-kubernetes-sidecar
    resources:
      limits:
        cpu: 100m
        memory: 128Mi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      readOnlyRootFilesystem: true
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/input-files
      name: config-map
    - mountPath: /var/output-files
      name: dynamic-conf
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-sxwnh
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: test-cluster-log-1
  nodeName: docker-desktop
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  subdomain: test-cluster
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: test-cluster-log-1-data
  - emptyDir: {}
    name: dynamic-conf
  - configMap:
      defaultMode: 420
      items:
      - key: fdbmonitor-conf-log
        path: fdbmonitor.conf
      - key: cluster-file
        path: fdb.cluster
      name: test-cluster-config
    name: config-map
  - emptyDir: {}
    name: fdb-trace-logs
  - name: kube-api-access-sxwnh
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-08-30T02:07:09Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-08-30T02:07:10Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-08-30T02:07:10Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-08-30T02:07:04Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://3f83172128bea633861e3e74753acb1a37ce0bea384f3bcbef306711657fafe6
    image: foundationdb/foundationdb:6.3.22
    imageID: docker-pullable://foundationdb/foundationdb@sha256:4b5e2a3c42366bd4a321d023e2f6d03ea1fbfe12a4f787a699aab409c9bf4fff
    lastState: {}
    name: foundationdb
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-08-30T02:07:09Z"
  - containerID: docker://ab10fae8e3f947e2f48dfe24aa10a731ad057c746b2d0eb2ec3252f4a4a6cea9
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imageID: docker-pullable://foundationdb/foundationdb-kubernetes-sidecar@sha256:6ac0ab6b42bae99c6e0b4a436ff8d1a053fbe653f13b31d650b640114e9a04f3
    lastState: {}
    name: foundationdb-kubernetes-sidecar
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-08-30T02:07:09Z"
  hostIP: 192.168.65.4
  initContainerStatuses:
  - containerID: docker://e463e8e8724c2596be6531957463bff87772b4ec8006ca2eb48f8820a6c2b7bd
    image: foundationdb/foundationdb-kubernetes-sidecar:6.3.22-1
    imageID: docker-pullable://foundationdb/foundationdb-kubernetes-sidecar@sha256:6ac0ab6b42bae99c6e0b4a436ff8d1a053fbe653f13b31d650b640114e9a04f3
    lastState: {}
    name: foundationdb-kubernetes-init
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://e463e8e8724c2596be6531957463bff87772b4ec8006ca2eb48f8820a6c2b7bd
        exitCode: 0
        finishedAt: "2022-08-30T02:07:08Z"
        reason: Completed
        startedAt: "2022-08-30T02:07:07Z"
  phase: Running
  podIP: 10.1.1.164
  podIPs:
  - ip: 10.1.1.164
  qosClass: Guaranteed
  startTime: "2022-08-30T02:07:04Z"
