cfg/test_s3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-pod
  name: my-pod
spec:
  serviceAccountName: s3-sa
  containers:
  - image: amazon/aws-cli
    name: my-aws-cli
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
